[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "NetKet"
description="Netket : Machine Learning toolbox for many-body quantum systems."
authors=[
    {name = "Giuseppe Carleo"},
    {name = "Filippo Vicentini"},
    {name = "The NetKet authors"},
]
license = {text= "Apache 2.0"}
readme = "README.md"
keywords = ["Machine Learning",
            "Quantum",
            "Neural Networks",
            "Neural Quantum States",
            "Jax",
            "Monte Carlo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = [
    "numpy~=1.20",
    "scipy>=1.5.3, <2",
    "tqdm>=4.60, <5",
    "rich>=10.0",
    "numba>=0.52, <0.60",
    "igraph>=0.10.0, <0.12.0",
    "jax>=0.4.16, <0.5",
    "jaxlib>=0.4.16, <0.5",
    "equinox>=0.11.3, <0.12",
    "flax>=0.7.1, <0.9",
    "orjson>=3.4, <4",
    "optax>=0.1.3, <0.3",
    "numba4jax>=0.0.10.post1, <0.1",
    # vendored plum dependencies.
    # TODO: Remove once we unvendor plum
    "beartype>=0.16.2",
    "typing-extensions; python_version<='3.10'",
    # TODO: Reinsert once we unvedor it and bump
    # version
    # "plum-dispatch>=2.2.2, <3",
]

[project.optional-dependencies]
mpi = [
    "mpi4py>=3.0.1, <4",
    "mpi4jax>=0.3.9, <0.5"
    ]
pyscf = [
    "sparse>=0.12.0",
    "pyscf>=2.0"
]
extra = [
    "tensorboardx>=2.0.0",
    "openfermion>=1.0.0",
    "h5py>=3.7.0",
    "qutip>=4",
    ]
dev = [
    "networkx>=2.4, <4",
    "matplotlib>=3",
    "pytest>=6",
    "pytest-xdist[psutil]>=2",
    "pytest-cov>=2.10.1",
    "pytest-json-report>=1.3",
    "coverage>=5",
    "pre-commit>=2.7",
    "black==23.9.1",
    "ruff==0.4.2",
    "qutip>=5",
    "wheel",
    "build",
    # TODO remove vendoring plum
    "IPython",
]
docs = [
    "Sphinx>=7.0,<7.4",
    "sphinx-design>=0.4.0",
    "sphinx-autodoc-typehints>=1.22,<3.0",
    "sphinxcontrib-fulltoc~=1.2.0",
    "sphinxcontrib-jsmath~=1.0.1",
    "myst-parser>=2.0.0,<3.1.0",
    "myst-nb>=1.0,<1.2",
    "sphinx-book-theme~=1.1.0",
]

[project.urls]
 homepage = "https://www.netket.org"
 documentation = "https://netket.readthedocs.io/en/latest/#"
 repository = "https://github.com/netket/netket"
 changelog = "https://netket.readthedocs.io/en/latest/docs/changelog.html"

[tool.hatch.build]
include = ["netket*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "netket/_version.py"


# Development tools

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
command_line = "-m pytest --verbose test"
source = ["netket"]

[tool.pytest.ini_options]
addopts = "--color=yes --verbose --durations=100 -n auto --tb=short"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
filterwarnings = [
    "ignore::UserWarning",
    "ignore:No GPU/TPU found, falling back to CPU.:UserWarning",
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:`np.long`",
    "ignore:`np.int` is a deprecated alias for the builtin `int`",
    "ignore::DeprecationWarning:tensorboardX",
    "ignore:jax.random.KeyArray is deprecated.",
    "ignore:Raw arrays as random keys to",
    "ignore:Defaulting to `holomorphic=False`,",
    "ignore::PendingDeprecationWarning: the matrix subclass",
    "ignore::netket.errors.HolomorphicUndeclaredWarning",
]
testpaths = [
    "test",
]

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = ["Examples/Legacy", "docs/conf.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "D410", "UP"]
fixable = ["E", "F", "W", "D", "UP"]
ignore = ["E501", "E731", "E741"]
#ignore = ["E266"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402","F401"]
"netket/nn/activation.py" = ["F401"]
"Examples/" = ["F401"]
"docs/sphinx_extensions/*" = ["UP", "D"]
"netket/utils/plum/*" = ["UP"]
